Fix display on mobile

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,97 +1,96 @@
 @import https://fonts.googleapis.com/css?family=Montserrat:400,700
 
 body
-    background: black;
-    color: white;
-    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: black
+    color: white
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif
 
 #background
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -999;
-    -webkit-filter: blur(5px);
-    opacity: 0.45;
+    width: 100%
+    height: 100%
+    position: absolute
+    top: 0
+    left: 0
+    z-index: -999
+    -webkit-filter: blur(5px)
+    opacity: 0.45
 
 #content
-    margin: 10%;
+    margin: 10%
 
 h1
-    font-size: 350%;
-    font-weight: bold;
-    letter-spacing: -1px;
-    margin-bottom: 20px;
+    font-size: 350%
+    font-weight: bold
+    letter-spacing: -1px
+    margin-bottom: 20px
 
 h2
-    margin-bottom: 25px;
-    opacity: 0.75;
-    text-transform: uppercase;
-    font-size: 225%;
-    letter-spacing: -1px;
+    margin-bottom: 25px
+    opacity: 0.75
+    text-transform: uppercase
+    font-size: 225%
+    letter-spacing: -1px
 
 nav
     ul
-        list-style-type: none;
-        margin: 0 0 0 -5px;
-        padding: 0;
+        list-style-type: none
+        padding: 0
 
         li
-            display: inline-block;
+            display: inline-block
         
             a
-                font-size: 250%;
-                margin-right: 10px;
-                color: white;
-                opacity: 0.75;
-                transition: opacity 0.25s;
+                font-size: 245%
+                margin-right: 10px
+                color: white
+                opacity: 0.75
+                transition: opacity 0.25s
         
             a:hover
-                opacity: 1;
-                color: orange;
-                text-shadow: 1px 1px 15px black;
+                opacity: 1
+                color: orange
+                text-shadow: 1px 1px 15px black
         
             span
-                display: none;
-        
-
-@media screen and (max-width:500px) 
-    h1
-        font-size: 300%;
-        text-align: center;
-
-    h2
-        font-size: 195%;
-        text-align: center;
-
-    #content
-        bottom: 15%;
-
-    nav
-        ul
-            text-align: center;
-            li
-                a
-                    font-size: 195%;
+                display: none
 
 #instagram
     a
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        color: white;
-        opacity: 0.25;
-        font-size: 1.25em;
-        display: none;
-        transition: opacity 0.25s;
+        position: absolute
+        bottom: 10px
+        right: 10px
+        color: white
+        opacity: 0.25
+        font-size: 1.25em
+        display: none
+        transition: opacity 0.25s
 
     a:hover
-        opacity: 1;
+        opacity: 1
 
     span
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        color: #666;
-        display: none;
+        position: absolute
+        bottom: 10px
+        right: 10px
+        color: #666
+        display: none
+
+@media screen and (max-width:500px) 
+    h1
+        font-size: 250%
+        text-align: center
+
+    h2
+        font-size: 160%
+        text-align: center
+
+    #content
+        bottom: 15%
+
+    nav
+        ul
+            text-align: center
+            margin-left: 8px
+            li
+                a
+                    font-size: 150%
